listagemEntrada