@@ -14,6 +14,7 @@ import org.springframework.data.domain.Pageable;
 import javax.persistence.EntityManager;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -24,26 +25,32 @@ public class AlunoRepositoryImpl implements CustomAlunoRepository {
 
     @Override
     public Page<Aluno> buscarAlunosComReconhecimentoNoDia(Escola escola, String nomeAluno, long etapaDeEnsinoId,
-            LocalDate dia, Pageable pageable) {
+                                                          LocalDate dia, Pageable pageable) {
         LocalDateTime diaInicio = dia.atStartOfDay();
         LocalDateTime diaFim = dia.plusDays(1).atStartOfDay();
-        List<String> locaisDeEntrada = escola.getLocaisDeEntrada().stream().map(LocalDeEntrada::getNumeroDispositivo)
-                .collect(Collectors.toList());
+        List<String> todosDispositivos = new ArrayList<>();
+        todosDispositivos.addAll(escola.getLocaisDeEntrada().stream()
+                .map(LocalDeEntrada::getNumeroDispositivo)
+                .toList());
+
+        todosDispositivos.addAll(escola.getRefeitorios().stream()
+                .map(Refeitorio::getNumeroDispositivo)
+                .toList());
         int pageSize = pageable.getPageSize();
         int currentPage = (pageable.getPageNumber() - 1);
         var queryAlunos = entityManager.createQuery(
-                "select a from Aluno a " +
-                        "where a.personId in " +
-                        "(select r.personId from Reconhecimento r " +
-                        "where r.dataDeCriacao between :diaInicio " +
-                        "and :diaFim " +
-                        (StringUtils.isNotBlank(nomeAluno) ? "and a.nome like :nome " : "") +
-                        (etapaDeEnsinoId > 0 ? "and a.etapaDeEnsino.id = :etapaDeEnsinoId " : "") +
-                        "and r.deviceKey in (:locaisDeEntrada)) " +
-                        "order by a.nome asc")
+                        "select a from Aluno a " +
+                                "where a.personId in " +
+                                "(select r.personId from Reconhecimento r " +
+                                "where r.dataDeCriacao between :diaInicio " +
+                                "and :diaFim " +
+                                (StringUtils.isNotBlank(nomeAluno) ? "and a.nome like :nome " : "") +
+                                (etapaDeEnsinoId > 0 ? "and a.etapaDeEnsino.id = :etapaDeEnsinoId " : "") +
+                                "and r.deviceKey in (:locaisDeEntrada)) " +
+                                "order by a.nome asc")
                 .setParameter("diaInicio", diaInicio)
                 .setParameter("diaFim", diaFim)
-                .setParameter("locaisDeEntrada", locaisDeEntrada)
+                .setParameter("locaisDeEntrada", todosDispositivos)
                 .setMaxResults(pageSize)
                 .setFirstResult(currentPage * pageSize);
         if (StringUtils.isNotBlank(nomeAluno)) {
@@ -55,13 +62,14 @@ public class AlunoRepositoryImpl implements CustomAlunoRepository {
         List<Aluno> alunos = queryAlunos.getResultList();
         return new PageImpl<>(alunos, PageRequest.of(currentPage, pageSize), escola.getQuantidadeAlunos());
     }
+
     @Override
     public Page<Aluno> buscarAlunosComReconhecimentoNoDiaNoRefeitorio(Escola escola, String nomeAluno, long etapaDeEnsinoId, LocalDate dia, Pageable pageable) {
         LocalDateTime diaInicio = dia.atStartOfDay();
         LocalDateTime diaFim = dia.plusDays(1).atStartOfDay();
         List<String> refeitorios = escola.getRefeitorios().stream().map(Refeitorio::getNumeroDispositivo).collect(Collectors.toList());
         int pageSize = pageable.getPageSize();
-        int currentPage = (pageable.getPageNumber()-1);
+        int currentPage = (pageable.getPageNumber() - 1);
         var queryAlunos = entityManager.createQuery(
                         "select a from Aluno a " +
                                 "where a.personId in " +
@@ -77,12 +85,12 @@ public class AlunoRepositoryImpl implements CustomAlunoRepository {
                 .setParameter("refeitorios", refeitorios)
                 .setMaxResults(pageSize)
                 .setFirstResult(currentPage * pageSize);
-                if (StringUtils.isNotBlank(nomeAluno)) {
-                    queryAlunos.setParameter("nome", "%" + nomeAluno + "%");
-                }
-                if (etapaDeEnsinoId > 0) {
-                    queryAlunos.setParameter("etapaDeEnsinoId", etapaDeEnsinoId);
-                }
+        if (StringUtils.isNotBlank(nomeAluno)) {
+            queryAlunos.setParameter("nome", "%" + nomeAluno + "%");
+        }
+        if (etapaDeEnsinoId > 0) {
+            queryAlunos.setParameter("etapaDeEnsinoId", etapaDeEnsinoId);
+        }
         List<Aluno> alunos = queryAlunos.getResultList();
         return new PageImpl<>(alunos, PageRequest.of(currentPage, pageSize), escola.getQuantidadeAlunos());
     }
@@ -91,7 +99,14 @@ public class AlunoRepositoryImpl implements CustomAlunoRepository {
     public Page<Aluno> buscarAlunosAusentesNaEntrada(Escola escola, String nomeAluno, long etapaDeEnsinoId, LocalDate dia, Pageable pageable) {
         LocalDateTime diaInicio = dia.atStartOfDay();
         LocalDateTime diaFim = dia.plusDays(1).atStartOfDay();
-        List<String> locaisDeEntrada = escola.getLocaisDeEntrada().stream().map(LocalDeEntrada::getNumeroDispositivo).collect(Collectors.toList());
+        List<String> todosDispositivos = new ArrayList<>();
+        todosDispositivos.addAll(escola.getLocaisDeEntrada().stream()
+                .map(LocalDeEntrada::getNumeroDispositivo)
+                .toList());
+
+        todosDispositivos.addAll(escola.getRefeitorios().stream()
+                .map(Refeitorio::getNumeroDispositivo)
+                .toList());
         int pageSize = pageable.getPageSize();
         int currentPage = pageable.getPageNumber() - 1;
         var queryAlunos = entityManager.createQuery(
@@ -102,11 +117,11 @@ public class AlunoRepositoryImpl implements CustomAlunoRepository {
                                 "AND :diaFim " +
                                 (StringUtils.isNotBlank(nomeAluno) ? "AND a.nome LIKE :nome " : "") +
                                 (etapaDeEnsinoId > 0 ? "AND a.etapaDeEnsino.id = :etapaDeEnsinoId " : "") +
-                                "AND r.deviceKey IN (:locaisDeEntrada)) " +
+                                "AND r.deviceKey IN (:todosDispositivos)) " +
                                 "ORDER BY a.nome ASC")
                 .setParameter("diaInicio", diaInicio)
                 .setParameter("diaFim", diaFim)
-                .setParameter("locaisDeEntrada", locaisDeEntrada)
+                .setParameter("todosDispositivos", todosDispositivos)
                 .setMaxResults(pageSize)
                 .setFirstResult(currentPage * pageSize);
         if (StringUtils.isNotBlank(nomeAluno)) {
